# socketcan-rs

./: .clog.toml  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  Vagrantfile  _typos.toml  build.rs  flake.nix  index.html  search-index.js  vcan.sh
.github/workflows/: ci.yml
bitflags/__core/ascii/: struct.EscapeDefault.html
bitflags/__core/boxed/: struct.Box.html
bitflags/__core/char/: struct.DecodeUtf16.html  struct.EscapeDefault.html  struct.EscapeUnicode.html  struct.ToLowercase.html  struct.ToUppercase.html
bitflags/__core/clone/: trait.Clone.html
bitflags/__core/cmp/: trait.Eq.html  trait.Ord.html  trait.PartialEq.html  trait.PartialOrd.html
bitflags/__core/collections/: struct.BTreeMap.html  struct.BTreeSet.html  struct.HashMap.html  struct.HashSet.html
bitflags/__core/default/: trait.Default.html
bitflags/__core/env/: struct.Args.html  struct.ArgsOs.html  struct.SplitPaths.html  struct.Vars.html  struct.VarsOs.html
bitflags/__core/fmt/: trait.Debug.html
bitflags/__core/fs/: struct.ReadDir.html  struct.WalkDir.html
bitflags/__core/hash/: trait.Hash.html
bitflags/__core/io/: struct.Bytes.html  struct.Chars.html  struct.Lines.html  struct.Split.html
bitflags/__core/iter/: struct.Chain.html  struct.Cloned.html  struct.Cycle.html  struct.Empty.html  struct.Enumerate.html  struct.Filter.html  struct.FilterMap.html  struct.FlatMap.html  struct.Fuse.html  struct.Inspect.html  struct.Map.html  struct.Once.html  struct.Peekable.html  struct.RangeInclusive.html  struct.Repeat.html  struct.Rev.html  struct.Scan.html  struct.Skip.html  struct.SkipWhile.html  struct.StepBy.html  struct.Take.html  struct.TakeWhile.html  struct.Zip.html  (+5 more)
doc/: CanDumpLogFormat.md
examples/: async_std_bridge.rs  async_std_print_frames.rs  async_std_send.rs  async_std_send_frames.rs  blocking.rs  blocking_timestamp.rs  can_recvts.rs  echo.rs  echo_fd.rs  echo_timestamps.rs  enumerate.rs  fd_send.rs  nonblocking.rs  playlog.rs  print_frames.rs  send_frames.rs  smol_bridge.rs  smol_print_frames.rs  smol_send.rs  smol_send_frames.rs  tokio_average.rs  tokio_bridge.rs  tokio_print_frames.rs  tokio_print_frames_timestamp.rs  tokio_recvts.rs  tokio_send.rs  tokio_send_frames.rs
hex/: enum.FromHexError.html  trait.FromHex.html  trait.ToHex.html
implementors/rand/: trait.Rng.js  trait.SeedableRng.js
implementors/socketcan/: trait.ShouldRetry.js
itertools/: enum.Diff.html  enum.EitherOrBoth.html  enum.FoldWhile.html  enum.MinMaxResult.html  enum.Partition.html  fn.assert_equal.html  fn.diff_with.html  fn.equal.html  fn.linspace.html  fn.partition.html  macro.iproduct!.html  macro.izip!.html  struct.Batching.html  struct.Chunk.html  struct.Chunks.html  struct.ChunksLazy.html  struct.Coalesce.html  struct.Combinations.html  struct.CombinationsN.html  struct.Dedup.html  struct.Flatten.html  struct.Group.html  struct.GroupBy.html  struct.GroupByLazy.html  struct.Groups.html  struct.ISlice.html  struct.Interleave.html  struct.InterleaveShortest.html  struct.Intersperse.html  struct.KMerge.html  struct.Linspace.html  struct.MendSlices.html  struct.Merge.html  struct.MergeBy.html  struct.MultiPeek.html  struct.PadUsing.html  struct.Product.html  struct.PutBack.html  struct.PutBackN.html  struct.RcIter.html  (+17 more)
itertools/misc/: index.html  struct.FlatTuples.html  trait.AppendTuple.html  trait.GenericRange.html  trait.IntoIteratorTuple.html  trait.MendSlice.html  trait.Slice.html  trait.ToFloat.html
itertools/size_hint/: fn.add.html  fn.add_scalar.html  fn.max.html  fn.min.html  fn.mul.html  fn.mul_scalar.html  fn.sub_scalar.html  index.html  type.SizeHint.html
nix/: enum.Error.html  macro.convert_ioctl_res!.html  macro.io!.html  macro.ioc!.html  macro.ioctl!.html  macro.ior!.html  macro.iorw!.html  macro.iow!.html  trait.NixPath.html  type.Result.html
nix/sched/: fn.clone.html  fn.setns.html  fn.unshare.html  index.html
nix/sys/: index.html
nix/unistd/: enum.Fork.html  fn.chdir.html  fn.chown.html  fn.chroot.html  fn.close.html  fn.daemon.html  fn.dup.html  fn.dup2.html  fn.dup3.html  fn.execv.html  fn.execve.html  fn.execvp.html  fn.fdatasync.html  fn.fork.html  fn.fsync.html  fn.ftruncate.html  fn.getegid.html  fn.geteuid.html  fn.getgid.html  fn.gethostname.html  fn.getpid.html  fn.getppid.html  fn.getuid.html  fn.isatty.html  fn.pipe.html  fn.pipe2.html  fn.pivot_root.html  fn.read.html  fn.setgid.html  fn.sethostname.html  fn.setpgid.html  fn.setuid.html  fn.unlink.html  fn.write.html  index.html
raw/: Cargo.toml
raw/src/: addr.rs  errors.rs  lib.rs  socket.rs  utils.rs
scripts/: buildtst.sh  vcan.sh
socketcan/: constant.EFF_FLAG.html  constant.EFF_MASK.html  constant.ERR_FLAG.html  constant.ERR_MASK.html  constant.RTR_FLAG.html  constant.SFF_MASK.html  enum.CANSocketOpenError.html  enum.ConstructionError.html  index.html  sidebar-items.js  struct.CANFrame.html  struct.CANSocket.html  trait.ShouldRetry.html
socketcan/dump/: enum.ParseError.html  index.html  sidebar-items.js  struct.CanDumpRecord.html  struct.CanDumpRecords.html  struct.Reader.html
src/: addr.rs  async_io.rs  constants.rs  dump.rs  enumerate.rs  err.rs  errors.rs  frame.rs  id.rs  lib.rs  nl.rs  smol.rs  socket.rs  tests.rs  timestamp.rs  tokio.rs  util.rs
src/async/: mod.rs  tokio.rs
src/bitflags/: lib.rs.html
src/hex/: lib.rs.html
src/itertools/: adaptors.rs.html  diff.rs.html  format.rs.html  free.rs.html  groupbylazy.rs.html  intersperse.rs.html  islice.rs.html  kmerge.rs.html  lib.rs.html  linspace.rs.html  minmax.rs.html  misc.rs.html  pad_tail.rs.html  rciter.rs.html  repeatn.rs.html  size_hint.rs.html  sources.rs.html  stride.rs.html  tee.rs.html  zip_eq.rs.html  zip_longest.rs.html  zipslices.rs.html  ziptuple.rs.html
src/libc/: dox.rs.html  lib.rs.html  macros.rs.html
src/nix/: errno.rs.html  fcntl.rs.html  features.rs.html  lib.rs.html  mount.rs.html  mqueue.rs.html  poll.rs.html  sched.rs.html  unistd.rs.html
src/nl/: mod.rs  rt.rs
src/socket/: async_io.rs  can.rs  can_fd.rs  mod.rs
tests/: cansocket-asyncio.rs  cansocket-smol.rs  cansocket.rs
(+2042 files in other folders)
