[workspace]
members = [
    "."
,   "raw"
]

[workspace.package]
version = "3.5.0"
edition = "2021"
rust-version = "1.70"
repository = "https://github.com/mbr/socketcan-rs"
license = "MIT"
description = """
Linux SocketCAN library. Send and receive CAN frames via CANbus on Linux.
"""

[workspace.dependencies]
anyhow = "1"
async-io = "2.5"
async-std = "1.13"
bitflags = "2.6"
clap = "3.2"
ctrlc = "3.2.2"
embedded-can = "0.4"
futures = "0.3"
futures-timer = "0.3"
futures-util = "0.3"
hex = "0.4"
itertools = "0.13"
libc = "0.2"
libudev = "0.3"
log = "0.4"
nb = "1.1"
nix = "0.29"
mio = "1"
serial_test = "2.0"
smol = "1.3"
socket2 = "0.5"
thiserror = "2"
tokio = "1"

[package]
name = "socketcan"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors = [
    "Marc Brinkmann <git@marcbrinkmann.de>",
    "Frank Pagliughi <fpagliughi@mindspring.com>"
]
documentation = "https://docs.rs/socketcan"
repository.workspace = true
license.workspace = true
description.workspace = true

# Features:
#
# "netlink" (default) - Whether to include CAN interface configuration 
#       capabilities based on netlink kernel communications
# "dump" (default) - Whether to include 'candump' log file parsing 
#	capabilities.
# "enumerate" - Ability to enumerate the available CAN network interfaces
#
# "utils" - Build the command-line utilities
#
# "tokio" - Async/await support with tokio
# "async-io" - Async/await support with async-io
# "async-std" - Async/await support for async-std using async-io
# "smol" - Async/await support for smol using async-io
#

[features]
default = ["netlink", "dump"]
netlink = ["neli"]
dump = []
netlink_tests = ["netlink"]
vcan_tests = ["netlink"]
utils = ["clap", "anyhow"]
tokio = ["dep:tokio", "mio", "futures"]
async-std = ["dep:async-std", "dep:async-io"]
async-io = ["dep:async-io"]
enumerate = ["dep:libudev"]

[dependencies]
embedded-can = { workspace = true }
nb = { workspace = true }
log = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
libc = { workspace = true }
nix = {  workspace = true, features = ["poll", "process", "net"] }
bitflags = { workspace = true }
thiserror = { workspace = true }
socket2 = { workspace = true, features = ["all"] }
clap = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
tokio = { workspace = true, features = ["net"], optional = true }
mio = { workspace = true, features = ["os-ext"], optional = true }
futures = { workspace = true, optional = true }
async-io = { workspace = true, optional = true }
smol = { workspace = true, optional = true }
async-std = { workspace = true, optional = true }
libudev = { workspace = true, optional = true }

# This hack avoids building neli on non-linux platforms, which
# avoids a ton of compile errors. Worthwhile together with the
# build.rs script to error early when building for non-linux
[target.'cfg(target_os = "linux")'.dependencies]
neli = { version = "0.6", optional = true }

[dev-dependencies]
anyhow ={ workspace = true }
clap = { workspace = true }
ctrlc = { workspace = true }
nb = { workspace = true }
# TODO: Is it possible to only include these for async builds?
futures-timer = { workspace = true }
futures-util = { workspace = true }
serial_test = { workspace = true, features = ["async"]}
async-std = { workspace = true, features = ["attributes"]}
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "io-util"] }
futures = { workspace = true }


[[bin]]
name = "rcan"
required-features = ["utils"]

[[example]]
name = "playlog"
required-features = ["dump"]

[[example]]
name = "enumerate"
required-features = ["enumerate"]

[[example]]
name = "tokio_send"
required-features = ["tokio"]

[[example]]
name = "tokio_bridge"
required-features = ["tokio"]

[[example]]
name = "tokio_print_frames"
required-features = ["tokio"]

[[example]]
name = "tokio_average"
required-features = ["tokio"]

[[example]]
name = "smol_send"
required-features = ["smol"]

[[example]]
name = "smol_bridge"
required-features = ["smol"]

[[example]]
name = "smol_print_frames"
required-features = ["smol"]

[[example]]
name = "async_std_send"
required-features = ["async-std"]

[[example]]
name = "async_std_bridge"
required-features = ["async-std"]

[[example]]
name = "async_std_print_frames"
required-features = ["async-std"]

