[package]
name = "socketcan-raw"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
libc = { workspace = true }
nix = { workspace = true, features = ["net", "poll"] }
socket2 = { workspace = true, features = ["all"] }
